--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+.body{
+    overflow-y: scroll;
+}
+
+.body::-webkit-scrollbar {
+    display: none;
+}
